--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,34 @@
 annotated-types==0.6.0
 anyio==3.7.1
 bcrypt==4.0.1
+cffi==1.16.0
 click==8.1.7
+contourpy==1.2.0
+cryptography==41.0.7
+cycler==0.12.1
 dnspython==2.4.2
 ecdsa==0.18.0
 email-validator==2.1.0.post1
 fastapi==0.105.0
+fonttools==4.47.0
 h11==0.14.0
 httptools==0.6.1
 idna==3.6
+kiwisolver==1.4.5
+matplotlib==3.8.2
+numpy==1.26.2
+oracledb==2.0.0
+packaging==23.2
 passlib==1.7.4
+Pillow==10.1.0
 pyasn1==0.5.1
+pycparser==2.21
 pydantic==2.5.2
 pydantic_core==2.14.5
+pydicom==2.4.4
 PyMySQL==1.1.0
+pyparsing==3.1.1
+python-dateutil==2.8.2
 python-dotenv==1.0.0
 python-jose==3.3.0
 python-multipart==0.0.6
