--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ cffi==1.16.0
 click==8.1.7
 contourpy==1.2.0
 cryptography==41.0.7
+cx_Oracle==8.3.0
 cycler==0.12.1
 dnspython==2.4.2
 ecdsa==0.18.0
@@ -26,6 +27,8 @@ pycparser==2.21
 pydantic==2.5.2
 pydantic_core==2.14.5
 pydicom==2.4.4
+pylibjpeg==1.4.0
+pylibjpeg-libjpeg==1.3.4
 PyMySQL==1.1.0
 pyparsing==3.1.1
 python-dateutil==2.8.2
